# cove-download-manager

./: .gitignore  README.md  build.sh  cove.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
cove/: __init__.py  __main__.py  app.py  aria2.py  clipboard.py  config.py  db.py  dialogs.py  entry.py  hls.py  main_window.py  native_host_install.py  native_messaging.py  queue.py  scheduler.py  theme.py  updater.py  widgets.py
docs/superpowers/specs/: 2026-06-17-chrome-extension-support-design.md  2026-06-17-m3u8-hls-support-design.md
extension/: background.js  manifest.json
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
packaging/: installer.iss  launcher.py
scripts/: build-deb.sh  build-windows-wine.sh  install-native-host.sh
tests/: test_aria2_external.py  test_entry.py  test_hls.py  test_native_messaging.py
