[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cove"
version = "1.4.1"
description = "Cove - a coastal-themed download manager built on aria2"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cove" }]
dependencies = [
    "PySide6>=6.5",
    "requests>=2.31",
]

[project.scripts]
cove = "cove.app:run"

[tool.setuptools]
packages = ["cove"]
include-package-data = true

[tool.setuptools.package-data]
cove = ["cove_icon.png"]
